--- a/AsyncHttpClient/app/src/main/res/layout/activity_main.xml
+++ b/AsyncHttpClient/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,8 @@
 	android:paddingBottom="@dimen/activity_vertical_margin"
 	tools:context=".MainActivity">
 
-	<TextView
-		android:text="Hello World!"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"/>
+	<hearsilent.asynchttpclient.CustomListView
+		android:id="@+id/listView"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"/>
 </RelativeLayout>
