--- a/Fragment/app/src/main/res/layout/fragment_second.xml
+++ b/Fragment/app/src/main/res/layout/fragment_second.xml
@@ -11,7 +11,7 @@
 		android:id="@+id/imageView"
 		android:layout_width="100dp"
 		android:layout_height="100dp"
-		android:src="@mipmap/ic_launcher"/>
+		android:src="@drawable/ic_speaker_phone_black_24px"/>
 
 	<LinearLayout
 		android:layout_width="match_parent"
