--- a/AsyncHttpClient/app/src/main/res/layout/activity_main.xml
+++ b/AsyncHttpClient/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,21 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
+	android:paddingBottom="@dimen/activity_vertical_margin"
 	android:paddingLeft="@dimen/activity_horizontal_margin"
 	android:paddingRight="@dimen/activity_horizontal_margin"
 	android:paddingTop="@dimen/activity_vertical_margin"
-	android:paddingBottom="@dimen/activity_vertical_margin"
 	tools:context=".MainActivity">
 
-	<hearsilent.asynchttpclient.CustomListView
-		android:id="@+id/listView"
+	<android.support.v4.widget.SwipeRefreshLayout
+		android:id="@+id/swipeRefreshLayout"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"/>
+		android:layout_height="match_parent">
+
+		<hearsilent.asynchttpclient.CustomListView
+			android:id="@+id/listView"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"/>
+
+	</android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
