Update ViewPager anim code.

--- a/ViewPager/app/src/main/res/layout/fragment_demo.xml
+++ b/ViewPager/app/src/main/res/layout/fragment_demo.xml
@@ -7,6 +7,14 @@
               android:orientation="vertical">
 
 	<TextView
+		android:id="@+id/textView2"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="test"
+		android:textColor="#212121"
+		android:textSize="40sp"/>
+
+	<TextView
 		android:id="@+id/textView"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
