Add tabLayout to viewPager.

--- a/ViewPager/app/src/main/res/layout/activity_main.xml
+++ b/ViewPager/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent">
+	android:layout_height="match_parent"
+	android:orientation="vertical">
 
-	<android.support.v4.view.ViewPager
-		android:id="@+id/viewPager"
+	<android.support.design.widget.AppBarLayout
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content">
+
+		<android.support.v7.widget.Toolbar
+			android:id="@+id/toolbar"
+			android:layout_width="match_parent"
+			android:layout_height="?attr/actionBarSize"
+			android:layout_gravity="top"
+			android:background="?attr/colorPrimary"
+			app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+			app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
+
+		<android.support.design.widget.TabLayout
+			android:id="@+id/tabs_main"
+			android:layout_width="match_parent"
+			android:layout_height="?attr/actionBarSize"
+			android:clipToPadding="false"
+			app:tabIndicatorColor="@android:color/white"
+			app:tabSelectedTextColor="@color/white_text"
+			app:tabTextColor="@color/white_text_secondary"/>
+	</android.support.design.widget.AppBarLayout>
+
+	<FrameLayout
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		app:tabGravity="fill"
-		app:tabMaxWidth="0dp"
-		app:tabMode="scrollable"/>
-</RelativeLayout>
+		android:foreground="?android:windowContentOverlay">
+
+		<android.support.v4.view.ViewPager
+			android:id="@+id/viewPager"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			app:tabGravity="fill"
+			app:tabMaxWidth="0dp"
+			app:tabMode="scrollable"/>
+	</FrameLayout>
+</LinearLayout>
