--- a/ViewPager/app/src/main/res/values/colors.xml
+++ b/ViewPager/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
 	<color name="colorPrimary">#3F51B5</color>
 	<color name="colorPrimaryDark">#303F9F</color>
 	<color name="colorAccent">#FF4081</color>
+
+	<color name="white_text_secondary">#b3ffffff</color>
+	<color name="white_text">#ffffff</color>
 </resources>
