--- a/Drawer/app/src/main/res/layout/activity_main.xml
+++ b/Drawer/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout
+	android:id="@+id/drawerLayout"
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
@@ -7,16 +8,10 @@
 	android:layout_height="match_parent"
 	tools:context="hearsilent.drawer.MainActivity">
 
-	<LinearLayout
+	<FrameLayout
+		android:id="@+id/view"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:gravity="center">
-
-		<TextView
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:text="Hello World!"/>
-	</LinearLayout>
+		android:layout_height="match_parent"/>
 
 	<android.support.design.widget.NavigationView
 		android:id="@+id/navigationView"
