--- a/Drawer/app/src/main/res/layout/drawer_header.xml
+++ b/Drawer/app/src/main/res/layout/drawer_header.xml
@@ -5,6 +5,7 @@
              android:layout_gravity="center_horizontal">
 
 	<TextView
+		android:id="@+id/abc"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:text="Test"
