--- a/CustomSpinner/app/src/main/res/layout/activity_main.xml
+++ b/CustomSpinner/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,15 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
+	android:paddingBottom="@dimen/activity_vertical_margin"
 	android:paddingLeft="@dimen/activity_horizontal_margin"
 	android:paddingRight="@dimen/activity_horizontal_margin"
 	android:paddingTop="@dimen/activity_vertical_margin"
-	android:paddingBottom="@dimen/activity_vertical_margin"
 	tools:context=".MainActivity">
 
 	<Spinner
 		android:id="@+id/spinner"
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content"/>
+		android:layout_height="wrap_content"
+		tools:listitem="@layout/list_custom"/>
 </RelativeLayout>
